# mockall_enum_demo

./: Cargo.toml
src/: auto_mock.rs  lib.rs  manu_mock.rs
