[package]
name = "mockall_enum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
mockall_double = "0.3.0"
# Either of the following fails applying `mock` to struct `S` in mod `mockable` in src/lib.rs
# mockall = "0.11.4"
mockall = { version = "0.11.4", features = ["nightly"] }